crates/strider-analyze/tests/snapshots/v3__aarch64be__floats__f64_to_f32.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "7" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "9" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Truncate\nu128 → u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "14" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "17" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
